@@ -1,65 +1,0 @@
-#! /usr/bin/perl5.18.2
-
-use strict;
-use Cwd;
-use File::Basename;
-use File::Spec;
-
-sub magic_number_matches {
-  return 0 unless -e '_build/magicnum';
-  my $FH;
-  open $FH, '<','_build/magicnum' or return 0;
-  my $filenum = <$FH>;
-  close $FH;
-  return $filenum == 682159;
-}
-
-my $progname;
-my $orig_dir;
-BEGIN {
-  $^W = 1;  # Use warnings
-  $progname = basename($0);
-  $orig_dir = Cwd::cwd();
-  my $base_dir = '/home/shlomif/progs/perl/cpan/Graph/perl-graph-easy/Graph-Easy';
-  if (!magic_number_matches()) {
-    unless (chdir($base_dir)) {
-      die ("Couldn't chdir($base_dir), aborting\n");
-    }
-    unless (magic_number_matches()) {
-      die ("Configuration seems to be out of date, please re-run 'perl Build.PL' again.\n");
-    }
-  }
-  unshift @INC,
-    (
-     'inc',
-     '/home/shlomif/apps/perl/modules/lib/perl5/site_perl/5.18.2',
-     '/home/shlomif/apps/perl/modules/lib/site_perl/5.18.2',
-     '/home/shlomif/apps/perl/modules/lib/perl5/5.18.2',
-     '/home/shlomif/apps/perl/modules/lib/perl5/site_perl/5.18.1/x86_64-linux-thread-multi',
-     '/home/shlomif/apps/perl/modules/lib/perl5/site_perl/5.18.1',
-     '/home/shlomif/apps/perl/modules/lib/site_perl/5.18.1',
-     '/home/shlomif/apps/perl/modules/lib/perl5/5.18.1'
-    );
-}
-
-close(*DATA) unless eof(*DATA); # ensure no open handles to this script
-
-use Test::Run::Builder;
-Module::Build->VERSION(q{0.36});
-
-# Some platforms have problems setting $^X in shebang contexts, fix it up here
-$^X = Module::Build->find_perl_interpreter;
-
-if (-e 'Build.PL' and not Test::Run::Builder->up_to_date('Build.PL', $progname)) {
-   warn "Warning: Build.PL has been altered.  You may need to run 'perl Build.PL' again.\n";
-}
-
-# This should have just enough arguments to be able to bootstrap the rest.
-my $build = Test::Run::Builder->resume (
-  properties => {
-    config_dir => '_build',
-    orig_dir => $orig_dir,
-  },
-);
-
-$build->dispatch;
