@@ -4,7 +4,6 @@ bench/stress.pl
 bench/test.dot
 bench/test.txt
 bin/graph-easy
-Build
 Build.PL
 CHANGES
 examples/as_ascii
@@ -59,7 +58,6 @@ LICENSE
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
-META.yml
 README
 scripts/bump-version-number.pl
 t/anon.t
@@ -766,4 +764,5 @@ t/txt/gdl/2_top_to_bottom.txt
 t/use_class.t
 t/vcg.t
 TODO
+META.yml
 META.json
