@@ -4,7 +4,7 @@
 
 package Graph::Easy::As_txt;
 
-$VERSION = '0.74';
+$VERSION = '0.75';
 
 #############################################################################
 #############################################################################
