@@ -5,7 +5,7 @@
 
 package Graph::Easy::As_vcg;
 
-$VERSION = '0.74';
+$VERSION = '0.75';
 
 #############################################################################
 #############################################################################
