@@ -5,7 +5,7 @@
 
 package Graph::Easy::Base;
 
-$VERSION = '0.74';
+$VERSION = '0.75';
 
 use strict;
 use warnings;
