@@ -6,7 +6,7 @@
 
 package Graph::Easy::Node;
 
-$VERSION = '0.74';
+$VERSION = '0.75';
 
 use Graph::Easy::Base;
 use Graph::Easy::Attributes;
