@@ -3,6 +3,20 @@
 use Test::More;
 use strict;
 
+sub _write_utf8_file
+{
+    my ($out_path, $contents) = @_;
+
+    open my $out_fh, '>:encoding(utf8)', $out_path
+        or die "Cannot open '$out_path' for writing - $!";
+
+    print {$out_fh} $contents;
+
+    close($out_fh);
+
+    return;
+}
+
 # test text file input => ASCII output, and back to as_txt() again
 
 BEGIN
@@ -75,8 +89,7 @@ foreach my $f (sort @files)
     {
         if ($ENV{__SHLOMIF__UPDATE_ME})
         {
-            require IO::All;
-            IO::All->new->file($out_path)->utf8->print($ascii);
+            _write_utf8_file($out_path, $ascii);
         }
     push @failures, $f;
     if (defined $Test::Differences::VERSION)
@@ -106,8 +119,7 @@ foreach my $f (sort @files)
     {
         if ($ENV{__SHLOMIF__UPDATE_ME})
         {
-            require IO::All;
-            IO::All->new->file($txt_path)->utf8->print($graph->as_txt());
+            _write_utf8_file($txt_path, scalar( $graph->as_txt() ));
         }
     push @failures, $f;
     if (defined $Test::Differences::VERSION)
